--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Piscine-PHP_day00"]
-	path = Piscine-PHP_day00
+[submodule "day00"]
+	path = day00
 	url = https://github.com/DarkHonin/Piscine-PHP_day00.git
