--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "day01"]
 	path = day01
 	url = https://github.com/DarkHonin/Piscine-PHP_day01.git
+[submodule "day02"]
+	path = day02
+	url = https://github.com/DarkHonin/-Piscine-PHP_day02.git
